resolve spacing and more optimization tweaks

--- a/src/Pages/App.scss
+++ b/src/Pages/App.scss
@@ -33,7 +33,7 @@
         .main-content-container {
             display: flex;
             flex-direction: row;
-            align-items: flex-start;
+            align-items: center;
             max-width: 100%;
             margin: 5vh 10vw;
 
