--- a/src/components/Projects/ProjectMicroComponent.scss
+++ b/src/components/Projects/ProjectMicroComponent.scss
@@ -14,6 +14,11 @@
         margin: 0 0 20px 0;
     }
 
+    @media only screen and (min-width: 480px) and (max-width: 850px) {
+        width: 25vw;
+        margin: 0 20px 20px 0;
+    }
+
     &.dark {
         background-color: #2e2e2e;
         transition: all 0.5s ease;
@@ -51,7 +56,6 @@
             display: flex;
             flex-wrap: wrap;
             font: 14px $font;
-            // border: 2px solid;
         }
     }
 
